--- a/PersonalSite/Shared/MainLayout.razor
+++ b/PersonalSite/Shared/MainLayout.razor
@@ -3,8 +3,8 @@
 <div class="col-xxl-6 mx-auto px-3 pt-md-5">
     <header class="d-flex flex-column flex-md-row align-items-center border-bottom">
         <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-            <img src="/images/profile.jpeg" alt="Profile Image" class="rounded-circle profile" />
-            <span class="fs-4">Marina's Blog</span>
+            <img src="/images/profile.jpeg" alt="Profile Image" class="rounded-circle profile" style="margin-left: 0;" />
+            <span class="fs-4">Marina Sundström</span>
         </a>
 
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
