--- a/PersonalSite/Blog/PostPage.razor.css
+++ b/PersonalSite/Blog/PostPage.razor.css
@@ -7,17 +7,35 @@
     background-attachment: scroll;
     background-position: center center;
     box-shadow: inset 0 0 0 50vw rgb(0 0 0 / 21%);
+    padding-top: 50px;
+}
+
+@media (max-width: 576px) {
+    .mast-head {
+        height: 350px;
+        padding-top: 60px;
+    }
+}
+
+@media (min-width: 576px) {
+    .mast-head {
+        height: 500px;
+        padding-top: 146px;
+    }
+}
+
+@media (min-width: 768px) {
+    .mast-head {
+        height: 500px;
+        padding-top: 100px;
+    }
 }
 
 @media (min-width: 992px) {
     .mast-head {
         height: 500px;
+        padding-top: 60px;
     }
-}
-
-.mast-head h1 {
-    color: white;
-    text-shadow: 0 0 80px rgb(0 0 0 / 80%);
 }
 
 .overlay {
