--- a/PersonalSite/Disqus/CommentCount.razor
+++ b/PersonalSite/Disqus/CommentCount.razor
@@ -1,4 +1,4 @@
-<h4 class="badge bg-secondary m-0"><DisqusCount Url="@Url"></DisqusCount> comments</h4>
+<h4 class="badge bg-secondary m-0"><DisqusCount Url="@Url" /> comments</h4>
 
 @code {
     [Parameter]
