--- a/PersonalSite/Shared/EducationView.razor
+++ b/PersonalSite/Shared/EducationView.razor
@@ -1,4 +1,5 @@
 @using PersonalSite.Models
+@using PersonalSite.Markdown
 
 @{
     var education = Model;
@@ -9,16 +10,14 @@
     DateTime? endDate = education.GetEndDate();
 }
 
-<div class="mb-5">
+<div class="mb-4">
         <h2>@education.School</h2>
-
-        <hr>
 
         <p>@education.FieldOfStudy</p>
 
         <p class="text-muted meta">@startDate.Humanize(endDate) • @startDate.Humanize2(endDate)<br />@education.Location</p>
 
-        @((MarkupString)education.Description?.Replace("\n", "<br />"))
+        <MarkdownView Content="@education.Description" />
 
         @if(education.Activities?.Any() ?? false)
         {
