--- a/PersonalSite/Shared/ExperienceView.razor
+++ b/PersonalSite/Shared/ExperienceView.razor
@@ -1,4 +1,5 @@
 @using PersonalSite.Models
+@using PersonalSite.Markdown
 
 @{
     var experience = Model.experience;
@@ -20,7 +21,7 @@ else
 
 <p class="text-muted meta">@startDate.Humanize(endDate) • @startDate.Humanize2(endDate)<br />@experience.Location</p>
 
-@((MarkupString)experience.Description.Replace("\n", "<br />"))
+<MarkdownView Content="@experience.Description" />
 
 @if(experience.Skills?.Any() ?? false)
 {
