--- a/PersonalSite/Shared/LinkedInShareButton.razor
+++ b/PersonalSite/Shared/LinkedInShareButton.razor
@@ -1,12 +1,23 @@
 @inject HttpClient HttpClient
 
-<a class="w3-button w3-padding-large w3-right" 
-    target="blank" 
-    rel="noopener noreferrer" 
-    onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" 
-    href="@($"https://www.linkedin.com/shareArticle?mini=true&url={Uri.EscapeDataString(Url)}&title={Uri.EscapeDataString(Title)}&summary={Uri.EscapeDataString(Summary)}&source={Uri.EscapeDataString(Title)}")">
-    <i class="fab fa-linkedin"></i> Share
-</a>
+<div class="mt-3">
+    <a target="blank" 
+        rel="noopener noreferrer" 
+        onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" 
+        href="@($"https://www.linkedin.com/shareArticle?mini=true&url={Uri.EscapeDataString(Url)}&title={Uri.EscapeDataString(Title)}&summary={Uri.EscapeDataString(Summary)}&source={Uri.EscapeDataString(Title)}")">
+
+            <div class="rounded-circle"
+            style="color: white;
+                padding-left: 14px;
+                padding-top: 7px;
+                background-color: #0072b1;
+                height: 50px;
+                width: 50px;
+                font-size: 18pt;">
+                <i class="fab fa-linkedin"></i> 
+            </div>
+    </a>
+</div>
 
 @code {
     [Parameter]
