--- a/PersonalSite/Shared/NavMenu.razor
+++ b/PersonalSite/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row ps-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Marina's Blog</a>
+    <a class="navbar-brand" href="">Marina Sundström</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
