--- a/PersonalSite/Shared/TwitterShareButton.razor
+++ b/PersonalSite/Shared/TwitterShareButton.razor
@@ -1,11 +1,20 @@
 @inject HttpClient HttpClient
 
-<a class="w3-button w3-padding-large w3-right" 
-    target="blank" 
+<a  target="blank" 
     rel="noopener noreferrer" 
     onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" 
     href="@($"https://twitter.com/intent/tweet?url={Uri.EscapeDataString(Url)}&text={Uri.EscapeDataString(Text)}&hashtags={Uri.EscapeDataString(string.Join(",", Hashtags))}")">
-    <i class="fab fa-twitter"></i> Tweet
+
+    <div class="rounded-circle"
+        style="color: white;
+            padding-left: 13px;
+            padding-top: 8px;
+            background-color: #1da1f2;
+            height: 50px;
+            width: 50px;
+            font-size: 18pt;">
+            <i class="fab fa-twitter"></i> 
+        </div>
 </a>
 
 @code {
