--- a/PersonalSite/Portfolio/PortfolioPage.razor
+++ b/PersonalSite/Portfolio/PortfolioPage.razor
@@ -47,7 +47,7 @@ else
 {
 
     <div class="mt-4">
-        <p>Here are some of my projects.</p>
+        <p>Here are some of my projects. More of them can be found in <a href="https://youtube.com/playlist?list=PLLBU--06ftFqPiAwkg3VKa2fIEhNu7J4L">my playlist</a> on YouTube.</p>
     </div>
 
     <div class="mt-5">
