--- a/PersonalSite/Resume/ResumePage.razor
+++ b/PersonalSite/Resume/ResumePage.razor
@@ -67,13 +67,13 @@
         <div class="post-line"></div>
 
 
-        <section class="text-content pr-4 mb-5">
+        <section class="text-content pt-1 pr-4 mb-5">
 
             <h2 id="objective" class="">Objective</h2>
 
             <div class="row">
 
-                <div class="mt-4 pr-4">
+                <div class="pr-4">
 
                     <p>I am a Software Developer with interest in Software design and the Development process.
                     </p>
