--- a/PersonalSite/Portfolio/PortfolioPage.razor
+++ b/PersonalSite/Portfolio/PortfolioPage.razor
@@ -73,7 +73,7 @@ else
                             {
                                 icon = "fab fa-youtube";
                             }
-                            <a class="btn btn-sm btn-secondary me-2" href="@link.Url"><i class="@icon fa-lg mr-1"></i> @link.Name</a>
+                            <a class="btn btn-sm btn-secondary me-2" href="@link.Url"><i class="@icon fa-lg me-1"></i> @link.Name</a>
                         }
                     </div>
 
