--- a/PersonalSite/Shared/Header.razor
+++ b/PersonalSite/Shared/Header.razor
@@ -3,7 +3,7 @@
 
 <div class="px-3 @(HasPadding ? "py-lg-5" : string.Empty)">
     <div class="row ">
-            <div class="col-xxl-6 mx-auto p-3 @(HasPadding ? "py-md-5" : string.Empty)">
+            <div class="col-12 col-xl-6 mx-auto p-3 @(HasPadding ? "py-md-5" : string.Empty)">
                 <h1 class="post-title">@Title</h1>
                 @if(Subtitle is not null) {
                      <h2 class="post-subtitle">@Subtitle</h2>
