--- a/PersonalSite/Shared/MainLayout.razor
+++ b/PersonalSite/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="col-xxl-6 mx-auto px-3 pt-md-5">
+<div class="col-12 col-xxl-6 mx-auto px-3">
     <header class="d-flex flex-column flex-md-row align-items-center border-bottom">
         <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
             <img src="/images/profile.jpeg" alt="Profile Image" class="rounded-circle profile"
@@ -72,7 +72,7 @@
 
 @Body
 
-<div class="col-xxl-6 mx-auto p-3 py-md-5">
+<div class="col-12 col-xl-6 mx-auto p-3 py-md-5">
     <footer class="pt-5 my-5 text-muted border-top">
         © @DateTime.Now.Year Marina Sundström
     </footer>
