--- a/PersonalSite/Blog/PostPage.razor
+++ b/PersonalSite/Blog/PostPage.razor
@@ -8,7 +8,7 @@
 
 @if (notFound)
 {
-    <div class="col-xxl-6 mx-auto p-3 py-md-5">
+    <div class="col-12 col-xl-6 mx-auto p-3 py-md-5">
     <NotFound />
 </div>
 }
@@ -16,7 +16,7 @@ else
 {
     @if (loadingError && exception is not null)
     {
-        <div class="col-xxl-6 mx-auto p-3 py-md-5">
+        <div class="col-12 col-xl-6 mx-auto p-3 py-md-5">
     <h1>@exception.GetType().Name</h1>
 
     <p>@exception.Message</p>
@@ -51,7 +51,7 @@ else
                 </div>
             }
 
-            <div class="col-xxl-6 mx-auto p-2 py-4 py-md-5 row">
+            <div class="col-12 col-xl-6 mx-auto p-2 py-4 py-md-5 row">
                 <div class="text-content col-md-10">
                     <MarkdownView Content="@post.Content" />
 
