--- a/PersonalSite/Shared/PageLayout.razor
+++ b/PersonalSite/Shared/PageLayout.razor
@@ -1,6 +1,6 @@
 @inherits LayoutComponentBase
 @layout MainLayout
 
-<div class="col-xxl-6 mx-auto p-3 py-md-5">
+<div class="col-12 col-xl-6 mx-auto p-3 py-md-5">
     @Body
 </div>
