--- a/PersonalSite/Blog/PostPage.razor
+++ b/PersonalSite/Blog/PostPage.razor
@@ -6,6 +6,8 @@
 @inject NavigationManager NavigationManager
 @inject HttpClient Http
 
+<PageTitle>Marina Sundström</PageTitle>
+
 @if (notFound)
 {
     <div class="col-12 col-xl-6 mx-auto p-3 py-md-5">
@@ -17,19 +19,19 @@ else
     @if (loadingError && exception is not null)
     {
         <div class="col-12 col-xl-6 mx-auto p-3 py-md-5">
-    <h1>@exception.GetType().Name</h1>
+            <h1>@exception.GetType().Name</h1>
 
-    <p>@exception.Message</p>
+            <p>@exception.Message</p>
 
-    <code>
+            <code>
                 @exception.StackTrace
             </code>
-</div>
+        </div>
     }
 
     @if (post is not null)
     {
-        <Title>@post.Title</Title>
+        <PageTitle>@post.Title - Marina Sundström</PageTitle>
 
         <div class="post">
     @if (post.Image is not null)
