--- a/PersonalSite/Portfolio/PortfolioPage.razor
+++ b/PersonalSite/Portfolio/PortfolioPage.razor
@@ -34,6 +34,8 @@
     }
 </style>
 
+<PageTitle>Portfolio - Marina Sundström</PageTitle>
+
 <div>
     <h1 class="post-title">Portfolio</h1>
     <div class="post-line"></div>  
