--- a/PersonalSite/Pages/Index.razor
+++ b/PersonalSite/Pages/Index.razor
@@ -8,7 +8,7 @@
 <div class="post-line"></div>
 
 <div class="row">
-    <div class="text-content col-md-8">
+    <div class="text-content col-xxl-10">
         <p>I have been programming since 2007. My interest back then was to figure out how it all works. Since then I
             have been learning a lot about software engineering, both professionally and in my free time.</p>
 
