--- a/PersonalSite/Resume/ResumePage.razor
+++ b/PersonalSite/Resume/ResumePage.razor
@@ -63,11 +63,10 @@
 <PageTitle>Resume - Marina Sundström</PageTitle>
 
 <div class="row">
-    <div class="sections col-md-10">
+    <div class="sections col-xxl-10">
 
         <h1 class="post-title">Resume</h1>
         <div class="post-line"></div>
-
 
         <section class="text-content pt-1 pe-4 mb-5">
 
