--- a/PersonalSite/Shared/MainLayout.razor
+++ b/PersonalSite/Shared/MainLayout.razor
@@ -11,28 +11,28 @@
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
             <ol class="list-inline list-unstyled" style="margin: 0;">
                 <li class="nav-item list-inline-item">
-                    <NavLink class="nav-link menu-link me-0 py-2 text-dark text-decoration-none text-uppercase" href=""
+                    <NavLink class="nav-link menu-link me-0 py-2 text-dark text-decoration-none" href=""
                         Match="NavLinkMatch.All">
                         About me
                     </NavLink>
                 </li>
 
                 <li class="nav-item list-inline-item">
-                    <NavLink class="nav-link menu-link me-0 py-2 text-dark text-decoration-none text-uppercase"
+                    <NavLink class="nav-link menu-link me-0 py-2 text-dark text-decoration-none"
                         href="blog">
                         Blog
                     </NavLink>
                 </li>
 
                 <li class="nav-item list-inline-item">
-                    <NavLink class="nav-link menu-link me-0 py-2 text-dark text-decoration-none text-uppercase"
+                    <NavLink class="nav-link menu-link me-0 py-2 text-dark text-decoration-none"
                         href="resume">
                         Resume
                     </NavLink>
                 </li>
 
                 <li class="nav-item list-inline-item">
-                    <NavLink class="nav-link menu-link me-0 py-2 text-dark text-decoration-none text-uppercase"
+                    <NavLink class="nav-link menu-link me-0 py-2 text-dark text-decoration-none"
                         href="portfolio">
                         Portfolio
                     </NavLink>
