--- a/PersonalSite/Blog/BlogPage.razor
+++ b/PersonalSite/Blog/BlogPage.razor
@@ -5,70 +5,77 @@
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
 
-<div class="mb-5">
-    <h1 class="post-title">Blog</h1>
-    <div class="post-line"></div>
-</div>
+<div class=" col-xxl-10">
+    <div class="mb-5">
+        <h1 class="post-title">Blog</h1>
+        <div class="post-line"></div>
+    </div>
 
-<PageTitle>Marina Sundström</PageTitle>
+    <PageTitle>Marina Sundström</PageTitle>
 
-@if(posts is null) 
-{
-    <text>Loading posts</text>
-}
-else 
-{
-    <PageTitle>Blog - Marina Sundström</PageTitle>
+    @if(posts is null) 
+    {
+        <text>Loading posts</text>
+    }
+    else 
+    {
+        <PageTitle>Blog - Marina Sundström</PageTitle>
 
-    <ol>
-        @foreach (var post in posts)
-        {
-            <li>
-                <div class="pt-2 mb-5">
-                    <a href="/blog/@post.Slug"><h1>@post.Title</h1></a>
-                @if(post.Subtitle is not null) {
-                     <h2 class="post-subtitle">@post.Subtitle</h2>
-                } 
-                <div class="post-line"></div>
-
-                <div class="post-info">
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            @if(post.Author is not null) 
-                            {
-                                @post.Author <text> • </text>
-                            }
-                            <time
-                                datetime="@post.Published.ToString("yyyy-MM-dd")">@post.Published.ToString("dddd, dd MMMM")</time>
-                        </div>
-                        <div>
-                            <CommentCount Url="@($"{NavigationManager.Uri}/{post.Title}")" />
-                        </div>
-                    </div>
-                    <div class="mt-2">
-                        @if(post.Tags is not null) 
+        <ol>
+            @foreach (var post in posts)
+            {
+                <li>
+                    <div class="pt-2 mb-5">
+                        <a href="/blog/@post.Slug"><h1>@post.Title</h1></a>
+                        @if(post.Subtitle is not null) 
                         {
-                            @foreach (var tag in post.Tags)
+                            <h2 class="post-subtitle">@post.Subtitle</h2>
+                        } 
+                    <div class="post-line"></div>
+
+                    <div class="post-info">
+                        <div class="d-flex justify-content-between">
+                            <p>
+                                @if(post.Author is not null) 
+                                {
+                                    @post.Author <text> • </text>
+                                }
+                                <time
+                                    datetime="@post.Published.ToString("yyyy-MM-dd")">@post.Published.ToString("dddd, dd MMMM")</time>
+                                @if(post.EstimatedReadTime is not null) 
+                                {
+                                    <text> • </text> <ReadTimeEstimateDiplay EstimatedTime="@post.EstimatedReadTime.GetValueOrDefault()" />
+                                }
+                            </p>
+                            <div>
+                                <CommentCount Url="@($"{NavigationManager.Uri}/{post.Title}")" />
+                            </div>
+                        </div>
+                        <div class="mt-2">
+                            @if(post.Tags is not null) 
                             {
-                                <span class="badge rounded-pill bg-secondary me-2">@tag</span>
+                                @foreach (var tag in post.Tags)
+                                {
+                                    <span class="badge rounded-pill bg-secondary me-2 mb-1">@tag</span>
+                                }
                             }
-                        }
+                        </div>
                     </div>
-                </div>
 
-                <div class="text-content">
-                  <MarkdownView Content="@post.Excerpt" Truncate="true" />
+                    <div class="text-content">
+                    <MarkdownView Content="@post.Excerpt" Truncate="true" />
 
-                </div>
+                    </div>
 
-                </div>
-                <hr />
-            </li>   
-        }
-    </ol>
+                    </div>
+                    <hr />
+                </li>   
+            }
+        </ol>
 
-    <Pagination Page="@Page.GetValueOrDefault()" PageCount="@totalPages" PageChanged="OnPageChanged" Href="/blog" />
-}
+        <Pagination Page="@Page.GetValueOrDefault()" PageCount="@totalPages" PageChanged="OnPageChanged" Href="/blog" />
+    }
+</div>
 
 @code {
     IEnumerable<PostInfo>? posts;
@@ -124,5 +131,5 @@ else
 
     record IndexPage(IEnumerable<PostInfo> Posts, int Page, int TotalPages);
 
-    record PostInfo(string Title, string? Subtitle, string Slug, string Author, string? Image, DateTime Published, string Excerpt, string[] Tags);
+    record PostInfo(string Title, string? Subtitle, string Slug, string Author, string? Image, DateTime Published, TimeSpan? EstimatedReadTime, string Excerpt, string[] Tags);
 }
