--- a/PersonalSite/Shared/FacebookShareButton.razor
+++ b/PersonalSite/Shared/FacebookShareButton.razor
@@ -1,20 +1,20 @@
 @inject HttpClient HttpClient
 
-<div class="mt-3">
-    <a  target="blank" 
+<div class="mt-0">
+    <a  target="_blank" 
         rel="noopener noreferrer" 
         onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" 
-        href="@($"https://twitter.com/intent/tweet?url={Uri.EscapeDataString(Url)}&text={Uri.EscapeDataString(Text)}&hashtags={Uri.EscapeDataString(string.Join(",", Hashtags))}")">
+        href="@($"https://www.facebook.com/sharer/sharer.php?u={Uri.EscapeDataString(Url)}")">
 
         <div class="rounded-circle"
             style="color: white;
-                padding-left: 13px;
+                padding-left: 15px;
                 padding-top: 8px;
-                background-color: #1da1f2;
+                background-color: #4267B2;
                 height: 50px;
                 width: 50px;
                 font-size: 18pt;">
-                <i class="fab fa-twitter"></i> 
+                <i class="fab fa-facebook"></i> 
             </div>
     </a>
 </div>
