--- a/PersonalSite/Shared/LinkedInShareButton.razor
+++ b/PersonalSite/Shared/LinkedInShareButton.razor
@@ -1,10 +1,10 @@
 @inject HttpClient HttpClient
 
 <div class="mt-3">
-    <a target="blank" 
+    <a  target="_blank" 
         rel="noopener noreferrer" 
         onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" 
-        href="@($"https://www.linkedin.com/shareArticle?mini=true&url={Uri.EscapeDataString(Url)}&title={Uri.EscapeDataString(Title)}&summary={Uri.EscapeDataString(Summary)}&source={Uri.EscapeDataString(Title)}")">
+        href="@($"https://www.linkedin.com/shareArticle?mini=true&url={Uri.EscapeDataString(Url)}&title={Uri.EscapeDataString(Title)}")">
 
             <div class="rounded-circle"
             style="color: white;
