--- a/PersonalSite/Resume/ResumePage.razor
+++ b/PersonalSite/Resume/ResumePage.razor
@@ -169,7 +169,7 @@
 
         </section>
 
-        <section class="mt-4 mb-4">
+        <section class="mt-4 mb-4" style="page-break-inside: avoid;">
 
             <h1 id="skills" class="pb-2">Skills</h1>
 
