--- a/PersonalSite/Shared/ExperienceList.razor
+++ b/PersonalSite/Shared/ExperienceList.razor
@@ -1,59 +1,65 @@
-@using PersonalSite.Models 
- 
- @foreach (var (company, experiences) in Groups)
-                    {
-                        if (experiences.Count() == 1)
-                        {
-                            var experience = experiences.First();
+@using PersonalSite.Models
 
-                            <div class="d-flex">
-                                <div class="col-logo">
-                                    <Logo Src="@experience.CompanyLogo" Alt="@($"{experience.Company} logo")" Class="me-4" Href="@experience.Link" />
-                                </div>
+@foreach (var (company, experiences) in Groups)
+{
+    if (experiences.Count() == 1)
+    {
+        var experience = experiences.First();
 
-                                <div class="flex-grow-1">
-                                    <div class="mb-4">
-                                        <h2>@experience.Title</h2>
+        <div class="d-flex" style="page-break-inside: avoid;">
+            <div class="col-logo">
+                <Logo Src="@experience.CompanyLogo" Alt="@($"{experience.Company} logo")" Class="me-4"
+                    Href="@experience.Link" />
+            </div>
 
-                                        <ExperienceView Model="@((experience: experience, isSub: false))" />
-                                    </div>
-                                </div>
-                            </div>
+            <div class="flex-grow-1">
+                <div class="mb-4">
+                    <h2>@experience.Title</h2>
 
-                            <hr />
-                        }
-                        else
-                        {
-                            var lastExperience = experiences.First();
-                            var firstExperience = experiences.Last();
+                    <ExperienceView Model="@((experience: experience, isSub: false))" />
+                </div>
+            </div>
+        </div>
 
-                                <div class="d-flex">
-                                     <div class="col-logo">
-                                        <Logo Src="@firstExperience.CompanyLogo" Alt="@($"{firstExperience.Company} logo")" Class="me-4" Href="@firstExperience.Link" />
-                                    </div>
+        <hr />
+    }
+    else
+    {
+        var lastExperience = experiences.First();
+        var firstExperience = experiences.Last();
 
-                                    <div class="flex-grow-1">
-                                        <h2>@firstExperience.Company</h2>
+    <div class="d-flex" style="page-break-inside: avoid;">
+    <div class="col-logo">
+        <Logo Src="@firstExperience.CompanyLogo" Alt="@($"{firstExperience.Company} logo")" Class="me-4"
+            Href="@firstExperience.Link" />
+    </div>
 
-                                        <p class="text-muted meta mb-4">
-                                            @firstExperience.GetStartDate().Humanize2(lastExperience.GetEndDate())</p>
+    <div class="flex-grow-1">
+        <h2>@firstExperience.Company</h2>
 
-                                        @foreach (var experience in experiences
-                                       .OrderByDescending(x => x.StartDate)
-                                       .ThenByDescending(x => x.EndDate))
-                                        {
-                                            <div class="mb-4 pt-1">
-                                                <h3>@experience.Title</h3>
+        <p class="text-muted meta mb-5">
+            @firstExperience.GetStartDate().Humanize2(lastExperience.GetEndDate())</p>
 
-                                                <ExperienceView Model="@((experience: experience, isSub: true))" />
-                                            </div>
-                                        }
-                                    </div>
-                                </div>
+        <ol class="timeline mt-5">
+            @foreach (var experience in experiences
+               .OrderByDescending(x => x.StartDate)
+               .ThenByDescending(x => x.EndDate))
+                {
+                    <li>
+                        <div class="mb-5 pt-1">
+                            <h3>@experience.Title</h3>
 
-                                <hr />
-                        }
-                    }
+                            <ExperienceView Model="@((experience: experience, isSub: true))" />
+                        </div>
+                    </li>
+                }
+                </ol>
+            </div>
+        </div>
+
+        <hr />
+    }
+}
 
 @code {
     [Parameter]
